@@ -519,29 +519,20 @@
     <include name="View_523_Showcase_Lovefilm_Item">
         <control type="group">
             <centerleft>50%</centerleft>
-            <width>1790</width>
-            <height>view_height</height>
-            <control type="group">
-                <left>15</left>
-                <top>15</top>
-                <include content="View_50_Poster">
-                    <param name="height" value="view_poster_height" />
-                    <param name="width" value="1790" />
-                    <param name="aspectratio" value="scale" />
-                    <param name="diffuse" value="diffuse/lovefilm.png" />
-                    <param name="icon" value="$VAR[Image_Fanart]" />
-                </include>
-                <control type="group">
-                    <top>-15</top>
-                    <include>View_WatchedOverlay</include>
-                </control>
-                <control type="image">
-                    <right>15</right>
-                    <bottom>30</bottom>
-                    <height>300</height>
-                    <aspectratio scalediffuse="false">stretch</aspectratio>
-                    <texture diffuse="diffuse/lovefilm.png" colordiffuse="panel_bg">common/gradient-actor.png</texture>
-                </control>
+            <width>1760</width>
+            <height>view_list_height</height>
+            <include content="Object_Poster">
+                <param name="icon" value="$VAR[Image_Fanart]" />
+                <param name="aspectratio" value="scale" />
+                <param name="diffuse" value="diffuse/lovefilm.png" />
+                <param name="fadetime" value="0" />
+                <param name="bordersize" value="0" />
+            </include>
+            <control type="image">
+                <bottom>0</bottom>
+                <height>300</height>
+                <aspectratio scalediffuse="false">stretch</aspectratio>
+                <texture diffuse="diffuse/lovefilm.png" colordiffuse="panel_bg">common/gradient-actor.png</texture>
             </control>
         </control>
     </include>
@@ -552,6 +543,21 @@
             <include>Defs_InfoDialog_Visible</include>
             <include>Animation_Common</include>
             <visible>Control.IsVisible(523)</visible>
+            <control type="group">
+                <left>view_pad</left>
+                <right>view_pad</right>
+                <bottom>view_bottom</bottom>
+                <control type="group">
+                    <left>-15</left>
+                    <right>-15</right>
+                    <top>-15</top>
+                    <bottom>-15</bottom>
+                    <include content="Object_Geometric">
+                        <param name="diffuse" value="diffuse/lovefilm.png" />
+                    </include>
+                    <include>Object_DefaultIcon</include>
+                </control>
+            </control>
             <control type="wraplist" id="523" >
                 <viewtype label="$LOCALIZE[31231]">bigwrap</viewtype>
                 <include content="View_Forced">
@@ -561,15 +567,14 @@
                 <onleft>523</onleft>
                 <onright>523</onright>
                 <onup>300</onup>
-                <top>-15</top>
                 <centerleft>50%</centerleft>
                 <orientation>horizontal</orientation>
-                <width>1790</width>
-                <height>view_height</height>
-                <itemlayout width="1790" height="view_height">
+                <width>1760</width>
+                <height>view_list_height</height>
+                <itemlayout width="1760" height="view_list_height">
                     <include>View_523_Showcase_Lovefilm_Item</include>
                 </itemlayout>
-                <focusedlayout width="1790" height="view_height">
+                <focusedlayout width="1760" height="view_list_height">
                     <include>View_523_Showcase_Lovefilm_Item</include>
                 </focusedlayout>
             </control>
@@ -577,6 +582,11 @@
                 <left>view_pad</left>
                 <right>view_pad</right>
                 <bottom>view_bottom</bottom>
+                <control type="group">
+                    <top>-15</top>
+                    <right>-15</right>
+                    <include>View_WatchedOverlay</include>
+                </control>
                 <control type="grouplist">
                     <right>40</right>
                     <orientation>vertical</orientation>
@@ -588,6 +598,7 @@
                         <param name="textcolor" value="panel_fg_100" />
                     </include>
                     <include content="Object_Info_Line">
+                        <param name="textcolor" value="panel_fg_100" />
                         <param name="label" value="$VAR[Label_Lovefilm_InfoLine]" />
                     </include>
                 </control>
