@@ -5,6 +5,7 @@
 - Hide info for single widget if no label available.
 - Reconfigure addon info dialog
 - Potential fix for sets issue in info dialog
+- Fix for lovefilm scroll plus nextaired text colour
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
